src/tests/snapshots/cargo_vet__tests__vet__feature-tree-no-exemptions.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "shared",
      "version": "10.0.0",
      "missing_criteria": [
        "fuzzed",
        "reviewed"
      ]
    },
    {
      "name": "third-1",
      "version": "10.0.0",
      "missing_criteria": [
        "fuzzed"
      ]
    },
    {
      "name": "third-2",
      "version": "10.0.0",
      "missing_criteria": [
        "reviewed"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "shared",
        "notable_parents": "root-a and root-b",
        "suggested_criteria": [
          "fuzzed",
          "reviewed"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      },
      {
        "name": "third-1",
        "notable_parents": "shared",
        "suggested_criteria": [
          "fuzzed"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      },
      {
        "name": "third-2",
        "notable_parents": "shared",
        "suggested_criteria": [
          "reviewed"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "fuzzed": [
        {
          "name": "third-1",
          "notable_parents": "shared",
          "suggested_criteria": [
            "fuzzed"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        }
      ],
      "fuzzed, reviewed (or strong-reviewed)": [
        {
          "name": "shared",
          "notable_parents": "root-a and root-b",
          "suggested_criteria": [
            "fuzzed",
            "reviewed"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        }
      ],
      "reviewed (or strong-reviewed)": [
        {
          "name": "third-2",
          "notable_parents": "shared",
          "suggested_criteria": [
            "reviewed"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        }
      ]
    },
    "total_lines": 300
  }
}
